--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Bandera Lección 28</title>
 </head>
 <body>
-  <section id="firts">
+  <section id="first">
 
   </section>
   <section id="second">
