--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bandera Lección 28</title>
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
   <section id="firts">
-
+    <div class="yellow"></div>
+    <div class="blue"></div>
+    <div class="red"></div>
   </section>
   <section id="second">
 
