--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="blue"></div>
     <div class="red"></div>
   </section>
+  <br>
   <section id="second">
-
+    <div class="yellow l"></div>
+    <div class="blue l"></div>
+    <div class="red l"></div>
   </section>
   <section id="third">
 
