--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div class="red l"></div>
   </section>
   <section id="third">
-
+    <div class="yellow r"></div>
+    <div class="blue r"></div>
+    <div class="red r"></div>
   </section>
 </body>
 </html>
